--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-popper": "0.9.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactstrap": "5.0.0"
   },
